# spatialaudio-unity

./: .clang-format  .gitatttributes  .gitignore  .gitmodules  .npmrc  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json
Documentation/: QuickStart.md
Pipelines/: azure-pipeline-release.yaml  azure-pipeline-validation.yaml
Pipelines/Templates/: Build.yaml  BuildAndroid.yaml  BuildWindows.yaml  DownloadPackage.yaml  Package.yaml  Publish.yaml  Sign.yaml  Variables.yaml
Samples/MicrosoftSpatializerSample/: .gitignore
Samples/MicrosoftSpatializerSample/Assets/: Master.mixer  New Render Texture.renderTexture  NewAudioMixer.mixer  NuGet.config  SpatializeOnOff.cs  packages.config
Samples/MicrosoftSpatializerSample/Assets/MRTK/Shaders/: ChannelPacker.shader  DepthBufferPostProcess.shader  InstancedColored.shader  InvisibleShader.shader  MRTK_Wireframe.shader  MixedRealityShaderUtils.cginc  MixedRealityStandard.shader  MixedRealityTextMeshPro.shader  Text3DShader.shader
Samples/MicrosoftSpatializerSample/Assets/Materials/: New Render Texture.mat
Samples/MicrosoftSpatializerSample/Assets/MixedRealityToolkit.Generated/: ProjectPreferences.asset
Samples/MicrosoftSpatializerSample/Assets/Scenes/: MainScene.unity  MainSceneSettings.lighting
Samples/MicrosoftSpatializerSample/ProjectSettings/: AudioManager.asset  EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
Source/: .gitignore  CMakeLists.txt
Source/Plugins/CrossPlatformPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity/: .npmrc  CHANGELOG.md  package.json
Source/Plugins/CrossPlatformPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity/scripts/: SpatializerSettings.asset  SpatializerSettings.cs
Source/Plugins/CrossPlatformPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity/scripts/Editor/: SpatializerSettingsEditor.cs
Source/Plugins/CrossPlatformPluginGenerator/ProjectSettings/: ProjectSettings.asset
Source/Plugins/IsacPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity/: .npmrc  Microsoft.SpatialAudio.Spatializer.Unity.nuspec  package.json
Source/Plugins/IsacPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity.HoloLens/: package.json
Source/Plugins/IsacPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity.HoloLens/Scripts/: Microsoft.SpatialAudio.Spatializer.asmdef  RoomEffectSendLevel.cs
Source/Plugins/IsacPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity.HoloLens/Scripts/Editor/: Microsoft.SpatialAudio.Spatializer.Editor.asmdef  RoomEffectSendLevelEditor.cs
Source/Plugins/IsacPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity/Scripts/: RoomEffectSendLevel.cs
Source/Plugins/IsacPluginGenerator/Assets/Microsoft.SpatialAudio.Spatializer.Unity/Scripts/Editor/: RoomEffectSendLevelEditor.cs
Source/Plugins/IsacPluginGenerator/ProjectSettings/: ProjectSettings.asset
Source/Spatializer/: AudioPluginInterface.h  AudioPluginUtil.cpp  AudioPluginUtil.h  CMakeLists.txt  HrtfWrapper.cpp  HrtfWrapper.h  PluginList.h  SpatializerMixerPlugin.cpp  SpatializerPlugin.cpp
Source/Spatializer/CrossPlatform/: CMakeLists.txt  HrtfConstants.h  HrtfWrapper.cpp  HrtfWrapper.h  PluginList.h  Plugin_SpatialMixer.cpp  Plugin_Spatializer.cpp  SpatializerMixerPlugin.cpp  SpatializerPlugin.cpp
Source/Spatializer/HoloLens2/: AudioPluginInterface.h  AudioPluginUtil.cpp  AudioPluginUtil.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  HrtfConstants.h  IsacAdapter.cpp  IsacAdapter.h  IsacSpatialSource.cpp  IsacSpatialSource.h  PluginList.h  RtwqInterop.cpp  RtwqInterop.h  SpatialAudioManager.cpp  SpatialAudioManager.h  SpatializerPlugin.cpp
Source/Spatializer/ProjectAcoustics/: AcousticsSharedTypes.h  AlignedBuffers.h  AudioPluginInterface.h  AudioPluginMicrosoftAcoustics.def  AudioPluginUtil.cpp  AudioPluginUtil.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  ConstVector.h  HrtfApiTypes.h  HrtfConstants.h  HrtfWrapper.cpp  HrtfWrapper.h  PluginList.h  Plugin_SpatialMixer.cpp  Plugin_Spatializer.cpp  README.md  TritonApiTypes.h  TritonWrapper.cpp  TritonWrapper.h
Source/Utilities/: CMakeLists.txt
Source/Utilities/vectormath/: CMakeLists.txt  vectormath_factory.cpp  vectormath_generic.cpp  vectormath_generic.h  vectormath_neon.cpp  vectormath_neon.h  vectormath_sse2.cpp  vectormath_sse2.h  vectormath_util.h
Source/Utilities/vectormath/test/: CMakeLists.txt  GenVectorMathTestData.m  vectormath_tests.cpp
Source/include/: AlignedAllocator.h  AlignedBuffers.h  CommonTestHelpers.h  CommonVersion.rc.in  ConstVector.h  HelperMacros.h  MathConstants.h  UndefSAL.h  VectorMath.h  WaveFormat.h  cputype.h  guid.h  mathutility.h  vectormath.h  vectormath_floatfc.h  vectormath_interfaces.h
Tools/: Nuget.SignConfig.xml  PublicFeed.npmrc  SignConfig.xml  build.py  constants.py  githelpers.py  nuget.config  nuget_package.py  oshelpers.py  packages.config  product_version.cmake  runclangformat.py  runcmake.py  stage.py  unity_package.py  upm_package.py
